<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ModernMum</string>
    <string name="btnregister">Register</string>
    <string name="action_settings">Settings</string>
    <string name="btnlogin">Login</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="email">Email Address</string>
    <string name="Password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="loce">Location</string>
    <string name="title_activity_register_screen">RegisterScreenActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="btnsubmit">Submit</string>
    <string name="btnback">back</string>
    <string name="des">show password</string>
    <string name="stroller">Baby Strollers</string>
    <string name="nipo">Baby Towels</string>
    <string name="diaper">Sandals</string>
    <string name="send">Send</string>
     <string name="lets">Lets Chat</string>
    

    <string-array name="modern">
        <item>location</item>
        <item>Westlands</item>
        <item>Ngong road</item>
        <item>Loresho</item>
        <item>Kasarani</item>
        <item>Karen</item>
        <item>langata</item>
        <item>Mt.View</item>
        <item>Uthiru</item>
        <item>Parklands</item>
        <item>Upper Hill</item>
        <item>Nairobi West</item>
        <item>South B</item>
        <item>South C</item>
    </string-array>

    <string name="title_activity_advert_screen">AdvertScreenActivity</string>
    <string name="baby">Baby Products</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="btnadvert">Advertise</string>
    <string name="btnchat">Chat</string>
    <string name="btntips">Tips</string>
    <string name="btnbuy">Buy</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_contact_screen">ContactScreenActivity</string>

</resources>
