<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mother"
    android:orientation="vertical" >

    
        <TextView
            android:id="@+id/tvdes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="22dp"
            android:text="@string/des"
           android:textSize="20sp"
           android:textColor="#0000"/>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="30dp"
        android:background="@color/pink"
        android:text="@string/btnlogin"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="30dp"
        android:background="@color/pink"
        android:text="@string/btnregister"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

  </RelativeLayout>